# data-chaos-monkey

./: .gitignore  .pre-commit-config.yaml  DataChaosMonkey_ExecutionDoc.md  DataChaosMonkey_H1.3.md  DataChaosMonkey_H15_Stage1.md  DataChaosMonkey_H15_Stage2.md  DataChaosMonkey_H15_Stage3.md  DataChaosMonkey_Setup.md  LICENSE  Makefile  README.md  SETUP.md  pyproject.toml
docs/: DataChaosMonkey_ContextPrompt.md  DataChaosMonkey_H1.1.md  DataChaosMonkey_H1.2.md  DataChaosMonkey_M0.md  DataChaosMonkey_M3.md  DataChaosMonkey_M6.md  DataChaosMonkey_M7.md  DataChaosMonkey_Roadmap.md
fixture/: GROUND_TRUTH.md
fixture/dbt_project/: .user.yml  chaos_fixture.duckdb  dbt_project.yml  profiles.yml
fixture/dbt_project/models/: schema.yml
fixture/dbt_project/models/marts/: fct_orders.sql  metric_revenue.sql
fixture/dbt_project/models/staging/: stg_charges.sql
fixture/dbt_project/seeds/: raw_charges.csv
fixture/gharchive/: dbt_project.yml  profiles.yml
fixture/gharchive/models/: schema.yml
fixture/gharchive/models/marts/: actor_stats.sql  daily_metrics.sql  repo_activity.sql
fixture/gharchive/models/raw/: raw_events.sql
fixture/gharchive/models/staging/: stg_events.sql  stg_issue_events.sql  stg_pr_events.sql  stg_push_events.sql  stg_watch_events.sql
src/chaos_monkey/: __init__.py  cli.py  injector.py  loader.py  report.py  runner.py  verdict.py
src/chaos_monkey/faults/: __init__.py  base.py  enum_drift.py  fanout.py  referential.py  statistical_drift.py  type_coercion.py  unit_shift.py
tests/: test_edge_cases.py  test_faults.py  test_verdict.py
