[project]
name = "chaos-monkey"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nisarg", email = "nisargs45@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.2",
    "dbt-core>=1.12.0",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.4",
    "pandas>=3.0.3",
    "rich>=15.0.0",
    "sqlglot>=30.12.0",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
[project.scripts]
chaos-monkey = "chaos_monkey.cli:cli"